# fabricater

./: .gitignore  Color.hs  Display.hs  Draw.hs  Geometry.hs  Knob.hs  Lighting.hs  MDL.spec  Main.hs  Matrix.hs  MeshReader.hs  Options.hs  Parser.hs  README.md  Stack.hs  Vector.hs  fabricater.cabal  makefile
c/: MDL-no-comments.spec  display.c  display.h  draw.c  draw.h  gmath.c  gmath.h  makefile  mdl.y  ml6.h  my_main.c  old_parser.c
java/: EdgeMatrix.java  GfxVector.java  MDL.java  MDLReader.java  Matrix.java  Polygon.java  PolygonMatrix.java  Screen.java  makefile  simpleTest.mdl
java/parseTables/: SymTab.java  opCode.java  opSavecs.java  opSaveknobs.java
java/parser/: parser.jj
python/: display.py  mdl.py  script.py  script.py.orig
scripts/: bonington.json  face.mdl  gallery.txt  geometrize.sh  jinkougaku.mdl  knobs.mdl  knobs.txt  process.awk  ratatouille.mdl  ratatouille.txt  return2.json  return2006.json
